# grpc-demo

./: Dockerfile  Makefile  README.md  README.rst  docker-compose.yml  entrypoint.sh  pyproject.toml
grpc_demo/client/: client.py
grpc_demo/server/: server.py
protos/: helloworld.proto
tests/: test_grpc_demo.py
