[tool.poetry]
name = "grpc-demo"
version = "0.1.0"
description = "gRPC Python Demo"
authors = ["Ramon Zuniga <ramon@fullstacklabs.co>"]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.43.0"
grpcio-tools = "^1.43.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
